--- a/swagger/paths/auth/logout.yaml
+++ b/swagger/paths/auth/logout.yaml
@@ -2,13 +2,15 @@ tags:
   - Auth
 summary: logout user
 operationId: logoutUser
-description: |
-  Logs out the authenticated user by deleting the session and clearing cookies.
-
-  ⚠️ **Swagger UI does not store cookies. Please use Postman or your frontend to test this route properly.**
-security: []
+description: Logs out the authenticated user by deleting the session.
+security:
+  - bearerAuth: []
 responses:
   '204':
     description: Successfully logged out. No content is returned.
+  '401':
+    $ref: ../../components/responses/401.yaml
+  '404':
+    $ref: ../../components/responses/404.yaml
   '500':
     $ref: ../../components/responses/500.yaml
