--- a/swagger/paths/recipes/{id}/get.yaml
+++ b/swagger/paths/recipes/{id}/get.yaml
@@ -1,43 +1,100 @@
-# tags:
-#   - Contacts
-# summary: Get contact by id
-# operationId: getContact
-# description: 'Get contact by id'
-# security:
-#   - bearerAuth: []
-# parameters:
-#   - in: path
-#     name: id
-#     required: true
-#     schema:
-#       type: string
-#       example: 65ca67e7ae7f10c88b598384
-# responses:
-#   '200':
-#     description: 'Get contact by id'
-#     content:
-#       application/json:
-#         schema:
-#           type: object
-#           required:
-#             - status
-#             - message
-#             - data
-#           properties:
-#             status:
-#               type: integer
-#               example: 200
-#             message:
-#               type: string
-#               example: Successfully found contact with id 65ca67e7ae7f10c88b598384!
-#             data:
-#               type: object
-#               $ref: '../../../components/schemas/contact.yaml'
-#   '400':
-#     $ref: '../../../components/responses/400.yaml'
-#   '401':
-#     $ref: '../../../components/responses/401.yaml'
-#   '404':
-#     $ref: '../../../components/responses/404.yaml'
-#   '500':
-#     $ref: '../../../components/responses/500.yaml'
+tags:
+  - Recipes
+summary: Get my own recipes with pagination and sorting
+operationId: getMyRecipes
+description: 'Get paginated list of recipes created by the authenticated user'
+security:
+  - bearerAuth: []
+parameters:
+  - in: query
+    name: page
+    schema:
+      type: integer
+      minimum: 1
+      default: 1
+    description: Page number for pagination
+  - in: query
+    name: perPage
+    schema:
+      type: integer
+      minimum: 1
+      maximum: 50
+      default: 10
+    description: Number of recipes per page
+  - in: query
+    name: sortBy
+    schema:
+      type: string
+      enum: [name, category, createdAt, updatedAt, cookiesTime]
+      default: createdAt
+    description: Field to sort by
+  - in: query
+    name: sortOrder
+    schema:
+      type: string
+      enum: [asc, desc]
+      default: desc
+    description: Sort order:ascending or descending
+  # Припустимо, що parseRecipeFilterParams може приймати фільтри, наприклад category:
+  - in: query
+    name: category
+    schema:
+      type: string
+    description: Filter recipes by category (optional)
+responses:
+  '200':
+    description: Successfully found recipes
+    content:
+      application/json:
+        schema:
+          type: object
+          required:
+            - status
+            - message
+            - data
+          properties:
+            status:
+              type: integer
+              example: 200
+            message:
+              type: string
+              example: Successfully found recipes!
+            data:
+              type: object
+              required:
+                - recipes
+                - page
+                - perPage
+                - totalItems
+                - totalPages
+                - hasPreviousPage
+                - hasNextPage
+              properties:
+                recipes:
+                  type: array
+                  items:
+                    $ref: '../../../components/schemas/recipe.yaml'
+                page:
+                  type: integer
+                  example: 2
+                perPage:
+                  type: integer
+                  example: 5
+                totalItems:
+                  type: integer
+                  example: 42
+                totalPages:
+                  type: integer
+                  example: 9
+                hasPreviousPage:
+                  type: boolean
+                  example: true
+                hasNextPage:
+                  type: boolean
+                  example: true
+  '401':
+    $ref: '../../../components/responses/401.yaml'
+  '404':
+    $ref: '../../../components/responses/404.yaml'
+  '500':
+    $ref: '../../../components/responses/500.yaml'
