--- a/swagger/paths/recipes/{id}/getFavorites.yaml
+++ b/swagger/paths/recipes/{id}/getFavorites.yaml
@@ -1,8 +1,8 @@
 tags:
   - Recipes
-summary: Get filtered and paginated list of recipes
-operationId: getRecipes
-description: 'Get a list of recipes with filtering and pagination support'
+summary: Get favorite recipes of the authenticated user
+operationId: getFavorites
+description: 'Retrieve paginated list of favorite recipes for the authenticated user'
 security:
   - bearerAuth: []
 parameters:
@@ -10,29 +10,20 @@ parameters:
     name: page
     schema:
       type: integer
-      example: 1
+      minimum: 1
+      default: 1
     description: Page number for pagination
   - in: query
-    name: perPage
+    name: limit
     schema:
       type: integer
-      example: 10
-    description: Number of items per page
-  - in: query
-    name: category
-    schema:
-      type: string
-      example: 'dessert'
-    description: Filter by category (припустимо, що такий фільтр є)
-  - in: query
-    name: ingredient
-    schema:
-      type: string
-      example: 'chocolate'
-    description: Filter by ingredient (припустимо, що такий фільтр є)
+      minimum: 1
+      default: 12
+    description: Number of recipes per page
+  # Додаткові параметри фільтрації можуть бути описані тут, якщо parseRecipeFilterParams підтримує їх
 responses:
   '200':
-    description: 'Successfully retrieved filtered list of recipes'
+    description: Successfully retrieved favorite recipes
     content:
       application/json:
         schema:
@@ -47,11 +38,11 @@ responses:
               example: 200
             message:
               type: string
-              example: Successfully found recipes!
+              example: Successfully retrieved favorite recipes
             data:
               type: object
               required:
-                - data
+                - favorites
                 - page
                 - perPage
                 - totalItems
@@ -59,7 +50,7 @@ responses:
                 - hasPreviousPage
                 - hasNextPage
               properties:
-                data:
+                favorites:
                   type: array
                   items:
                     $ref: '../../../components/schemas/recipe.yaml'
@@ -68,13 +59,13 @@ responses:
                   example: 1
                 perPage:
                   type: integer
-                  example: 10
+                  example: 12
                 totalItems:
                   type: integer
-                  example: 45
+                  example: 34
                 totalPages:
                   type: integer
-                  example: 5
+                  example: 3
                 hasPreviousPage:
                   type: boolean
                   example: false
@@ -85,3 +76,5 @@ responses:
     $ref: '../../../components/responses/401.yaml'
   '404':
     $ref: '../../../components/responses/404.yaml'
+  '500':
+    $ref: '../../../components/responses/500.yaml'
