fix after review

--- a/swagger/paths/auth/login.yaml
+++ b/swagger/paths/auth/login.yaml
@@ -5,6 +5,7 @@ operationId: loginUser
 description: Authenticate an existing user and return access token with user data
 security: []
 requestBody:
+  required: true
   content:
     application/json:
       schema:
