--- a/swagger/paths/recipes/get.yaml
+++ b/swagger/paths/recipes/get.yaml
@@ -69,7 +69,7 @@ responses:
                 data:
                   type: array
                   items:
-                    $ref: '../../components/schemas/recipe.yaml#/Recipe'
+                    $ref: '../../components/schemas/recipe.yaml'
                 page:
                   type: integer
                   example: 1
