--- a/swagger/components/schemas/recipe.yaml
+++ b/swagger/components/schemas/recipe.yaml
@@ -1,4 +1,3 @@
-Recipe:
   type: object
   required:
     - _id
@@ -28,10 +27,9 @@ Recipe:
       maximum: 360
       example: 45
     cals:
-      type: integer
+      type: [integer, "null"]
       minimum: 1
       maximum: 10000
-      nullable: true
       example: 320
     category:
       type: string
@@ -50,9 +48,8 @@ Recipe:
       maxLength: 1200
       example: "Mix all ingredients and bake at 180°C for 35 minutes."
     recipeImg:
-      type: string
+      type: [string, "null"]
       format: uri
-      nullable: true
       example: "https://example.com/images/recipe.jpg"
     owner:
       type: string
