--- a/swagger/paths/recipes/profile/own/get.yaml
+++ b/swagger/paths/recipes/profile/own/get.yaml
@@ -84,7 +84,7 @@ responses:
                 recipes:
                   type: array
                   items:
-                    $ref: '../../../../components/schemas/recipe.yaml#/Recipe'
+                    $ref: '../../../../components/schemas/recipe.yaml'
                 page:
                   type: integer
                   example: 2
