--- a/swagger/components/schemas/recipe.yaml
+++ b/swagger/components/schemas/recipe.yaml
@@ -57,6 +57,10 @@ Recipe:
     owner:
       type: string
       example: "65d123abc9876543210fedcb"
+    isFavorite:
+      type: boolean
+      nullable: true
+      example: true
     createdAt:
       type: string
       format: date-time
