--- a/swagger/paths/recipes/profile/favorites/post.yaml
+++ b/swagger/paths/recipes/profile/favorites/post.yaml
@@ -1,26 +1,18 @@
 tags:
   - Recipes
-summary: Add a recipe to favorites and get paginated favorite recipes
+summary: Add recipe to favorites
 operationId: addToFavorites
-description: 'Add a recipe to the authenticated user favorites list and return paginated favorites'
+description: >
+  Adds a recipe to the user's favorites list.
+  Returns a paginated, filtered, and sorted list of favorite recipes,
+  ordered by the sequence in which they were added (newest first).
+  Supports filtering by category, ingredient, and name, plus sorting by predefined fields.
+
+Example request: |
+  `POST http://localhost:3000/api/recipes/profile/favorites`
+
 security:
   - bearerAuth: []
-parameters:
-  - in: query
-    name: page
-    schema:
-      type: integer
-      minimum: 1
-      default: 1
-    description: Page number for pagination
-  - in: query
-    name: limit
-    schema:
-      type: integer
-      minimum: 1
-      maximum: 50
-      default: 12
-    description: Number of favorite recipes per page
 requestBody:
   required: true
   content:
@@ -32,11 +24,65 @@ requestBody:
         properties:
           recipeId:
             type: string
-            example: "65d7e8a4b9c3d12a5d8e9b74"
-            description: ID of the recipe to add to favorites
+            description: The ID of the recipe to add to favorites
+            example: "6462a8f74c3d0ddd28898019"
+
+parameters:
+  - in: query
+    name: page
+    schema:
+      type: integer
+      default: 1
+      minimum: 1
+    description: Page number for pagination (default is 1)
+  - in: query
+    name: perPage
+    schema:
+      type: integer
+      default: 12
+      minimum: 1
+      maximum: 50
+    description: Number of items per page (default is 12, max 50)
+  - in: query
+    name: sortBy
+    schema:
+      type: string
+      enum:
+        - _id
+        - title
+        - cals
+        - time
+        - category
+        - createdAt
+        - updatedAt
+      default: createdAt
+    description: Field to sort the favorite recipes by
+  - in: query
+    name: sortOrder
+    schema:
+      type: string
+      enum: [asc, desc]
+      default: desc
+    description: Sort order (ascending or descending)
+  - in: query
+    name: category
+    schema:
+      type: string
+    description: Filter recipes by category (exact match)
+  - in: query
+    name: ingredient
+    schema:
+      type: string
+    description: Filter recipes by ingredient name (partial match)
+  - in: query
+    name: name
+    schema:
+      type: string
+    description: Filter recipes by recipe title/name (partial match)
+
 responses:
-  '201':
-    description: Successfully created a new recipe!
+  '200':
+    description: 'Recipe added to favorites'
     content:
       application/json:
         schema:
@@ -48,14 +94,14 @@ responses:
           properties:
             status:
               type: integer
-              example: 201
+              example: 200
             message:
               type: string
-              example: Successfully created a new recipe!
+              example: 'Recipe added to favorites'
             data:
               type: object
               required:
-                - favorites
+                - recipes
                 - page
                 - perPage
                 - totalItems
@@ -63,8 +109,9 @@ responses:
                 - hasPreviousPage
                 - hasNextPage
               properties:
-                favorites:
+                recipes:
                   type: array
+                  description: List of favorite recipes in order of addition
                   items:
                     $ref: '../../../../components/schemas/recipe.yaml'
                 page:
@@ -75,21 +122,50 @@ responses:
                   example: 12
                 totalItems:
                   type: integer
-                  example: 34
+                  example: 4
                 totalPages:
                   type: integer
-                  example: 3
+                  example: 1
                 hasPreviousPage:
                   type: boolean
                   example: false
                 hasNextPage:
                   type: boolean
-                  example: true
+                  example: false
+
   '400':
-    $ref: '../../../../components/responses/400.yaml'
-  '401':
-    $ref: '../../../../components/responses/401.yaml'
+    description: 'Recipe ID is required'
+    content:
+      application/json:
+        schema:
+          type: object
+          required:
+            - status
+            - message
+          properties:
+            status:
+              type: integer
+              example: 400
+            message:
+              type: string
+              example: 'Recipe ID is required'
+
+
   '404':
-    $ref: '../../../../components/responses/404.yaml'
+    description: 'User or Recipe not found'
+    content:
+      application/json:
+        schema:
+          type: object
+          required:
+            - status
+            - message
+          properties:
+            status:
+              type: integer
+              example: 404
+            message:
+              type: string
+              example: 'User or Recipe not found'
   '500':
     $ref: '../../../../components/responses/500.yaml'
