--- a/swagger/paths/auth/register.yaml
+++ b/swagger/paths/auth/register.yaml
@@ -18,14 +18,18 @@ requestBody:
           name:
             description: User's name
             type: string
+            maxLength: 16
             example: John Doe
           email:
             description: User's email
             type: string
+            maxLength: 128
             example: john123@gmail.com
           password:
             description: User's password
             type: string
+            minLength: 8
+            maxLength: 128
             example: examplepwd123
 responses:
   '201':
