--- a/swagger/paths/recipes/add-recipe/post.yaml
+++ b/swagger/paths/recipes/add-recipe/post.yaml
@@ -27,6 +27,7 @@ requestBody:
         properties:
           title:
             type: string
+            maxLength: 64
             example: "Steak Diane"
           category:
             type: string
@@ -36,16 +37,22 @@ requestBody:
             example: "French"
           instructions:
             type: string
+            maxLength: 1200
             example: "Heat oil in a skillet over medium-high heat..."
           description:
             type: string
+            maxLength: 200
             example: "A classic French dish made with pan-seared steak..."
           time:
             type: integer
+            minimum: 1
+            maximum: 360
             example: 30
             description: "Preparation time in minutes (number input, stored as string)"
           cals:
             type: integer
+            minimum: 1
+            maximum: 10000
             example: 400
             description: "Caloric content (optional)"
           thumb:
@@ -54,6 +61,8 @@ requestBody:
             description: "Recipe photo file"
           ingredients:
             type: array
+            minItems: 2
+            maxItems: 16
             description: "List of ingredients with measure and id"
             items:
               type: object
